<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/report_icon"
        android:title="@string/title_report" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/news_icon"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/shop_icon"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notification_icon"
        android:title="@string/title_notification" />

</menu>