<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dawat.farmer.mamits.ui.dashboard.DashboardFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.dawat.farmer.mamits.ui.report.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.dawat.farmer.mamits.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.dawat.farmer.mamits.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.dawat.farmer.mamits.ui.notifications.NotificationsFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_sub_category"
        android:name="com.dawat.farmer.mamits.ui.dashboard.SubCategoryFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_sub_category" />

    <fragment
        android:id="@+id/navigation_category_detail"
        android:name="com.dawat.farmer.mamits.ui.dashboard.CategoryDetailFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_category_detail" />

    <fragment
        android:id="@+id/navigation_srp_report_detail"
        android:name="com.dawat.farmer.mamits.ui.report.SrpReportDetailFragment"
        tools:layout="@layout/fragment_srp_report_detail" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dawat.farmer.mamits.ui.profile.ProfileFragment"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_appeal"
        android:name="com.dawat.farmer.mamits.ui.appeal.AppealFragment"
        tools:layout="@layout/fragment_profile" />
</navigation>